# CSFL-simulator

./: .gitignore  CLAUDE.md  FD_review_exp_plan.md  IMPLEMENTATION_SUMMARY.md  MAC_SETUP_FIX.md  MEMORY_MANAGEMENT.md  PARALLELIZATION.md  QUICK_FIX.txt  README.md  ROBUST_MEMORY_FIX.md  SELECTION_METHODS.md  SESSION_SUMMARY.md  SNAPSHOT_FIX_SUMMARY.md  TOOLTIP_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  clean_cache.sh  method_compare.md  pyproject.toml  reproduce_issue.py  requirements.txt  run_mac.sh  test.ipynb  test.py  test_parallelization.py  test_partition.py
.streamlit/: config.toml
configs/: scope_revision_sweeps.yaml
csfl_simulator/: __main__.py
csfl_simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: APEX_Critical_Review_for_IEEE_TAI.md  APEX_method_reference.md  APEX_v2_experiment_analysis.md  APEX_v2_experiment_plan.md  APEX_v2_proposal.md  DELTA_method_reference.md  FD_deep_analysis_and_next_sota.md  FD_experiment_analysis.md  FD_experiments.md  FD_method_reference.md  FD_novel_methods_and_experiments.md  FD_paper_vs_code.md  FD_results_analysis.html  FD_results_analysis.md  FD_speed_optimization_notes.md  MAML_select_method_reference.md  SCOPE_FD_paper_narrative.md  SCOPE_FD_reference.md  _analysis_header.yaml  _analysis_pdf_header.tex  _pdf_header.tex  _pdf_style.css  advanced_selection_methods.md  compass_artifact_wf-7cdb1cc9-3d61-488e-9448-13f67bf41882_text_markdown.md  fairness_adjusted_literature_review.md  paper_guide.md  parameter_tooltips_guide.md
presets/: datasets.yaml  methods.yaml  models.yaml
scripts/: download_data.py  (+26 more)
(+1410 files in other folders)
